Some Vulkan elements added and OpenGL and Vulkan source code separated.

--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -1,10 +1,11 @@
-add_library(small3d BoundingBoxSet.cpp GetTokens.cpp Image.cpp Logger.cpp Model.cpp Renderer.cpp
+add_library(small3d BoundingBoxSet.cpp GetTokens.cpp Image.cpp Logger.cpp Model.cpp OpenGL/Renderer.cpp
   SceneObject.cpp Sound.cpp ../include/small3d/BoundingBoxSet.hpp
   ../include/small3d/GetTokens.hpp ../include/small3d/Image.hpp ../include/small3d/Logger.hpp
-  ../include/small3d/Model.hpp ../include/small3d/Renderer.hpp ../include/small3d/SceneObject.hpp
+  ../include/small3d/Model.hpp ../include/small3d/OpenGL/Renderer.hpp ../include/small3d/SceneObject.hpp
   ../include/small3d/Sound.hpp)
 
 target_include_directories(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d")
+target_include_directories(small3d PUBLIC "${small3d_SOURCE_DIR}/small3d/include/small3d/OpenGL")
 
 if(MINGW)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
