--- a/small3d/src/CMakeLists.txt
+++ b/small3d/src/CMakeLists.txt
@@ -29,6 +29,9 @@ if(DEFINED BUILD_TESTS AND BUILD_TESTS)
   file(COPY "${small3d_SOURCE_DIR}/small3d/resources" DESTINATION "${small3d_BINARY_DIR}/bin")
   target_include_directories(unittests PUBLIC "${small3d_SOURCE_DIR}/small3d/include")
   target_link_libraries(unittests PUBLIC small3d "${CONAN_LIBS}")
+  if(DEFINED BUILD_FOR_VULKAN AND BUILD_FOR_VULKAN)
+    target_link_libraries(unittests PUBLIC small3d "${Vulkan_LIBRARY}")
+  endif(DEFINED BUILD_FOR_VULKAN AND BUILD_FOR_VULKAN)
   set_target_properties(unittests PROPERTIES LINK_FLAGS "${CONAN_EXE_LINKER_FLAGS}")
   if(MSVC)
     set_target_properties(unittests PROPERTIES LINK_FLAGS_RELEASE "-NODEFAULTLIB:MSVCRTD")
