--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ env:
     - CONAN_USERNAME="dimi309"
     - CONAN_CHANNEL="stable"
     - CONAN_REMOTES="https://api.bintray.com/conan/dimi309/conan-packages, https://api.bintray.com/conan/bincrafters/public-conan"
-#    - CONAN_UPLOAD="https://api.bintray.com/conan/dimi309/conan-packages"
-    - CONAN_REFERENCE="small3d/master"
+    - CONAN_UPLOAD="https://api.bintray.com/conan/dimi309/conan-packages"
+    - CONAN_REFERENCE="small3d/1.3.2"
 
 linux: &linux
    os: linux
