--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     - CONAN_CHANNEL="stable"
     - CONAN_REMOTES="https://api.bintray.com/conan/dimi309/conan-packages, https://api.bintray.com/conan/bincrafters/public-conan"
     - CONAN_UPLOAD="https://api.bintray.com/conan/dimi309/conan-packages"
-    - CONAN_REFERENCE="small3d/1.3.2"
+    - CONAN_REFERENCE="small3d/master"
 
 linux: &linux
    os: linux
